force-app/main/default/objects/Stripe_Payout_Log__c/Stripe_Payout_Log__c.object-meta.xml
<CustomObject>
    <description>This Object will store the Payout logs whenever the payout is created in the stripe.</description>
    <label>Stripe Payout Log</label>
    <nameField>
        <displayFormat>PL-{0000000}</displayFormat>
        <label>Stripe Payout Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Payout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>