force-app/main/default/objects/Stripe_Payout_Log__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>Field1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>