force-app/main/default/objects/Stripe_Payout_Log__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Stripe Payout Logs</relationshipLabel>
    <relationshipName>Stripe_Payout_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>