force-app/main/default/objects/Stripe_Payout_Log__c/fields/Sage_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Sage_Error_Message__c</fullName>
    <label>Sage Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>