force-app/main/default/objects/Stripe_Payout_Log__c/fields/SageJournalEntryKey__c.field-meta.xml
<CustomField>
    <fullName>SageJournalEntryKey__c</fullName>
    <label>SageJournalEntryKey</label>
    <length>20</length>
    <type>Text</type>
</CustomField>