force-app/main/default/objects/Stripe_Payout_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This Field will store the Status of the payout object in stripe.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unprocessed</fullName>
                <default>true</default>
                <label>Unprocessed</label>
            </value>
            <value>
                <fullName>Processed in SF</fullName>
            </value>
            <value>
                <fullName>Posted in Sage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>