force-app/main/default/objects/Stripe_Payout_Log__c/fields/Stripe_Fee_charged__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Fee_charged__c</fullName>
    <description>This Field will store the Total Stripe Fee charged by the Stripe per payout.</description>
    <label>Stripe Fee charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>