force-app/main/default/objects/Stripe_Payout_Log__c/fields/Stripe_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Amount__c</fullName>
    <description>This Field will Store the Payout Amount of the Stripe(Not in cents).</description>
    <label>Stripe Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>