force-app/main/default/objects/Stripe_Payout_Log__c/fields/Stripe_Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payout_Date__c</fullName>
    <description>This Field will store the Payout Date and Time on which payout is created on the Stripe</description>
    <label>Stripe Payout Date</label>
    <type>DateTime</type>
</CustomField>