force-app/main/default/objects/Stripe_Payout_Log__c/fields/Stripe_Payout_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payout_Id__c</fullName>
    <description>This Field will store the Stripe Payout Id from the Stripe</description>
    <label>Stripe Payout Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>