force-app/main/default/objects/Stripe_Payout_Log__c/fields/Stripe_Payout_URL__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payout_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://dashboard.stripe.com/payouts/&quot;+ Stripe_Payout_Id__c , Stripe_Payout_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Payout URL</label>
    <type>Text</type>
</CustomField>