force-app/main/default/objects/Stripe_Payout_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stripe_Payout_Id__c</columns>
    <columns>Organisation__c</columns>
    <columns>Stripe_Payout_Date__c</columns>
    <columns>Stripe_Payment_Amount__c</columns>
    <columns>Stripe_Fee_charged__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>